
colorschemes = \
	colorschemes/00frozenbox.conf \
	colorschemes/alt.conf \
	colorschemes/bespin.conf \
	colorschemes/black.conf \
	colorschemes/darcula.conf \
	colorschemes/dark-fruit-salad.conf \
	colorschemes/dark.conf \
	colorschemes/fluffy.conf \
	colorschemes/gedit.conf \
	colorschemes/github.conf \
	colorschemes/himbeere.conf \
	colorschemes/inkpot.conf \
	colorschemes/kugel.conf \
	colorschemes/mc.conf \
	colorschemes/metallic-bottle.conf \
	colorschemes/monokai.conf \
	colorschemes/notepad-plus-plus.conf \
	colorschemes/oblivion2.conf \
	colorschemes/pygments.conf \
	colorschemes/railcasts2.conf \
	colorschemes/retro.conf \
	colorschemes/sleepy-pastel.conf \
	colorschemes/slushpoppies.conf \
	colorschemes/solarized-dark.conf \
	colorschemes/solarized-light.conf \
	colorschemes/spyder-dark.conf \
	colorschemes/steampunk.conf \
	colorschemes/tango-dark.conf \
	colorschemes/tango-light.conf \
	colorschemes/tinge.conf \
	colorschemes/ubuntu.conf \
	colorschemes/vibrant-ink.conf \
	colorschemes/zenburn.conf

filetypes = \
	filedefs/filetypes.abaqus \
	filedefs/filetypes.abc \
	filedefs/filetypes.actionscript \
	filedefs/filetypes.ada \
	filedefs/filetypes.asciidoc \
	filedefs/filetypes.asm \
	filedefs/filetypes.batch \
	filedefs/filetypes.c \
	filedefs/filetypes.caml \
	filedefs/filetypes.Clojure.conf \
	filedefs/filetypes.cmake \
	filedefs/filetypes.cobol \
	filedefs/filetypes.coffeescript \
	filedefs/filetypes.common \
	filedefs/filetypes.conf \
	filedefs/filetypes.cpp \
	filedefs/filetypes.cs \
	filedefs/filetypes.css \
	filedefs/filetypes.CUDA.conf \
	filedefs/filetypes.Cython.conf \
	filedefs/filetypes.d \
	filedefs/filetypes.diff \
	filedefs/filetypes.docbook \
	filedefs/filetypes.erlang \
	filedefs/filetypes.f77 \
	filedefs/filetypes.ferite \
	filedefs/filetypes.forth \
	filedefs/filetypes.fortran \
	filedefs/filetypes.freebasic \
	filedefs/filetypes.Genie.conf \
	filedefs/filetypes.glsl \
	filedefs/filetypes.go \
	filedefs/filetypes.Graphviz.conf \
	filedefs/filetypes.haskell \
	filedefs/filetypes.haxe \
	filedefs/filetypes.html \
	filedefs/filetypes.java \
	filedefs/filetypes.javascript \
	filedefs/filetypes.JSON.conf \
	filedefs/filetypes.latex \
	filedefs/filetypes.lisp \
	filedefs/filetypes.lua \
	filedefs/filetypes.makefile \
	filedefs/filetypes.markdown \
	filedefs/filetypes.matlab \
	filedefs/filetypes.nsis \
	filedefs/filetypes.objectivec \
	filedefs/filetypes.pascal \
	filedefs/filetypes.perl \
	filedefs/filetypes.php \
	filedefs/filetypes.po \
	filedefs/filetypes.powershell \
	filedefs/filetypes.python \
	filedefs/filetypes.r \
	filedefs/filetypes.restructuredtext \
	filedefs/filetypes.ruby \
	filedefs/filetypes.rust \
	filedefs/filetypes.Scala.conf \
	filedefs/filetypes.sh \
	filedefs/filetypes.sql \
	filedefs/filetypes.tcl \
	filedefs/filetypes.txt2tags \
	filedefs/filetypes.vala \
	filedefs/filetypes.verilog \
	filedefs/filetypes.vhdl \
	filedefs/filetypes.xml \
	filedefs/filetypes.yaml \
	filedefs/filetypes.zephir

tagfiles = \
	tags/std99.c.tags \
	tags/std.php.tags \
	tags/std.py.tags \
	tags/std.pas.tags \
	tags/entities.html.tags

template_files = \
	templates/files/main.c \
	templates/files/module.erl \
	templates/files/main.cxx \
	templates/files/file_html5.html \
	templates/files/file.rb \
	templates/files/program.pas \
	templates/files/main.java \
	templates/files/main.d \
	templates/files/main.py \
	templates/files/file.tex \
	templates/files/file.php \
	templates/files/file.html \
	templates/files/bash.sh \
	templates/files/falcon.fal \
	templates/files/main.cpp \
	templates/files/main.rs \
	templates/files/main.vala \
	templates/files/pascal.pas \
	templates/files/perl.pl \
	templates/files/perlModule.pm \
	templates/files/python.py \
	templates/files/ruby.rb \
	templates/files/style.css

templates = \
	templates/bsd \
	templates/changelog \
	templates/fileheader \
	templates/function \
	templates/gpl

nobase_dist_pkgdata_DATA = \
	$(colorschemes) \
	$(filetypes) \
	$(tagfiles) \
	$(template_files) \
	$(templates) \
	filetype_extensions.conf \
	snippets.conf \
	ui_toolbar.xml \
	geany.glade

if GTK3
nobase_dist_pkgdata_DATA += \
	geany-3.0.css \
	geany-3.20.css \
	geany.css
else
nobase_dist_pkgdata_DATA += geany.gtkrc
endif

